<resources>
    <string name="app_name">Eco_App</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_icon_fab">add icon Fab</string>
    <string name="filter_icon_fab">Filter icon Fab</string>
    <string name="title_activity_add">addActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="speciesName">Nome da Espécie</string>
    <string name="speciesLink">Link da Espécie(opcional)</string>
    <string name="camera_button">camera_button</string>
    <string name="speciesPicture">picture</string>
    <string name="speciesNameDatabase">speciesName(Fetch DB)</string>
    <string name="date">Date:</string>
    <string name="date_of_registry">Date of registry(Fetch DB)</string>
    <string name="location">Loc. Geografica</string>
    <string name="lat_long">Latitude | Longitude</string>
    <string name="view_Activity">speciesView(debug)</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">"Forgot Password?"</string>
    <string name="resetpwd">Reset your Password!</string>
    <string name="prompt_email_reset">Enter Your Email Address!</string>
    <string name="resetpwd_btn">Reset Password</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Locate">Locate</string>
    <string name="api_key">AIzaSyDZ6HCz1XHDcfRdDA_CE1KxSuIxqzLOv_A</string>

</resources>